* Fixed controlbox subpanel z-index so new room creation panel can be closed * Set converse to use sessionStorage instead of localStorage so in development we can clean browser storage easier * Added config commented option to converse that should be activated in production, persistent_store: "IndexedDB" to we use indexedDB instead of localStorage

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/chat.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/chat.scss
@@ -344,6 +344,7 @@ $the-grey: #eaeaea;
   position: absolute;
   right: 0;
   top: 0;
+  z-index: 9;
 }
 
 .chat__subpanel-header {
